force-app/main/default/objects/Animal_Daily_Care__c/Animal_Daily_Care__c.object-meta.xml
<CustomObject>
    <label>Animal Daily Care</label>
    <nameField>
        <displayFormat>ADCN-{0000}</displayFormat>
        <label>Animal Daily Care Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animals Daily Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>