force-app/main/default/objects/Animal_Daily_Care__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Animals Daily Care</relationshipLabel>
    <relationshipName>Animals_Daily_Care</relationshipName>
    <type>Lookup</type>
</CustomField>