force-app/main/default/objects/Animal_Daily_Care__c/fields/Daily_Care__c.field-meta.xml
<CustomField>
    <fullName>Daily_Care__c</fullName>
    <label>Daily Care</label>
    <referenceTo>Daily_Care__c</referenceTo>
    <relationshipLabel>Animals Daily Care</relationshipLabel>
    <relationshipName>Animals_Daily_Care</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>