force-app/main/default/objects/Animal_Daily_Care__c/fields/Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Enrichment__c</fullName>
    <description>Enrichment field on Animal care. We have one on Animal record aswell.</description>
    <label>Enrichment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>