force-app/main/default/objects/Animal_Daily_Care__c/fields/Feeding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Amount__c</fullName>
    <label>Feeding Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>