force-app/main/default/objects/Animal_Daily_Care__c/fields/Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Handling_Instructions__c</fullName>
    <label>Handling Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>