force-app/main/default/objects/Animal_Daily_Care__c/fields/Movement_Method_For_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Movement_Method_For_Cleaning__c</fullName>
    <label>Movement Method For Cleaning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>