force-app/main/default/objects/Animal_Daily_Care__c/fields/Movements_For_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Movements_For_Cleaning__c</fullName>
    <label>Movements For Cleaning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>