force-app/main/default/objects/Animal_Daily_Care__c/fields/Mvmt_Round_Notes_Cleaning_Destination__c.field-meta.xml
<CustomField>
    <fullName>Mvmt_Round_Notes_Cleaning_Destination__c</fullName>
    <label>Mvmt Round Notes &amp; Cleaning Destination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>