force-app/main/default/objects/Animal_Daily_Care__c/fields/Special_Care_TX__c.field-meta.xml
<CustomField>
    <fullName>Special_Care_TX__c</fullName>
    <label>Special Care TX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>